--- a/Minimal.html
+++ b/Minimal.html
@@ -35,7 +35,7 @@
       <ul class="navbar-nav">
         <li class="nav-item">
            <li class="nav-item">
-          <a class="nav-link" href="frame.html">Home</a>
+          <a class="nav-link" href="index.html">Home</a>
         </li>
           <a class="nav-link" href="Trending.html">Trending</a>
         </li>
