--- a/html/Abstract.html
+++ b/html/Abstract.html
@@ -25,7 +25,7 @@
   <nav class="navbar navbar-expand-lg ">
     <a class="navbar-brand" href="#">QWALLITY</a>
     <div class="topnav-right">
-       
+        
     </div>
     <button class="navbar-toggler ml-auto custom-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" >
@@ -33,14 +33,11 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
-        </li>
         <li class="nav-item">
+          <li class="nav-item">
+          <a class="nav-link" href="../index.html">Home</a>
+        </li>
           <a class="nav-link" href="Trending.html">Trending</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="Abstract.html">Abstract</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="Minimal.html">Minimal</a>
@@ -52,18 +49,20 @@
           <a class="nav-link" href="Marvel.html">Marvel</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="Anime.html">Anime</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link about-button" href="About.html">About</a>
         </li>
       </ul>
     </div>
   </nav>
-
 <div id="loading-container">
   <div class="loading-animation">
     <div class="loader"></div>
   </div>
 </div>
-<div class="anime">ANIME</div>
+<div class="abstract">ABSTRACT</div>
   <div class="container">
     <div class="row">
       <div class="col-lg-6 col-md-12">
