--- a/html/Anime.html
+++ b/html/Anime.html
@@ -25,15 +25,19 @@
   <nav class="navbar navbar-expand-lg ">
     <a class="navbar-brand" href="#">QWALLITY</a>
     <div class="topnav-right">
-  
+       
+    </div>
     <button class="navbar-toggler ml-auto custom-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" >
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
+         <li class="nav-item">
+          <a class="nav-link" href="../index.html">Home</a>
+        </li>
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link" href="Trending.html">Trending</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="Abstract.html">Abstract</a>
@@ -48,9 +52,6 @@
           <a class="nav-link" href="Marvel.html">Marvel</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Anime.html">Anime</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link about-button" href="About.html">About</a>
         </li>
       </ul>
@@ -62,17 +63,15 @@
     <div class="loader"></div>
   </div>
 </div>
-
-<div class="trending"> TRENDING</div>
-
+<div class="anime">ANIME</div>
   <div class="container">
     <div class="row">
       <div class="col-lg-6 col-md-12">
         <p>
-          <a href="images\rar\Blue Hills.zip" download="Blue Hills">
-            <img src="images\jpg\wallpaperflare.com_wallpaper.jpg" alt="B.M" width="687" height="295" class="responsive" style="border-radius:1%; border: 2px solid white; margin-bottom:4px;">
+          <a href="images\rar\spider-man-iron-suit-4k.zip" download="IRON SPIDER">
+            <img src="images\jpg\spider-man-iron-suit-4k.jpg" alt="I.S" width="687" height="295" class="responsive" style="border-radius:1%; border: 2px solid white; margin-bottom:4px;">
           </a>
-          Blue Hills
+          Iron Spider
         </p>
       </div>
       <div class="col-lg-6 col-md-12">
