--- a/html/Marvel.html
+++ b/html/Marvel.html
@@ -25,7 +25,7 @@
   <nav class="navbar navbar-expand-lg ">
     <a class="navbar-brand" href="#">QWALLITY</a>
     <div class="topnav-right">
-     
+       
     </div>
     <button class="navbar-toggler ml-auto custom-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" >
@@ -34,8 +34,8 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-           <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
+          <li class="nav-item">
+          <a class="nav-link" href="../index.html">Home</a>
         </li>
           <a class="nav-link" href="Trending.html">Trending</a>
         </li>
@@ -43,10 +43,10 @@
           <a class="nav-link" href="Abstract.html">Abstract</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Nature.html">Nature</a>
+          <a class="nav-link" href="Minimal.html">Minimal</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Marvel.html">Marvel</a>
+          <a class="nav-link" href="Nature.html">Nature</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="Anime.html">Anime</a>
@@ -57,12 +57,13 @@
       </ul>
     </div>
   </nav>
-<div id="loading-container">
+
+ <div id="loading-container">
   <div class="loading-animation">
     <div class="loader"></div>
   </div>
 </div>
-<div class="minimal">MINIMAL</div>
+<div class="marvel">MARVEL</div>
   <div class="container">
     <div class="row">
       <div class="col-lg-6 col-md-12">
