--- a/html/Minimal.html
+++ b/html/Minimal.html
@@ -25,7 +25,7 @@
   <nav class="navbar navbar-expand-lg ">
     <a class="navbar-brand" href="#">QWALLITY</a>
     <div class="topnav-right">
-        
+     
     </div>
     <button class="navbar-toggler ml-auto custom-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" >
@@ -34,13 +34,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
+           <li class="nav-item">
+          <a class="nav-link" href="../index.html">Home</a>
         </li>
           <a class="nav-link" href="Trending.html">Trending</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Minimal.html">Minimal</a>
+          <a class="nav-link" href="Abstract.html">Abstract</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="Nature.html">Nature</a>
@@ -62,7 +62,7 @@
     <div class="loader"></div>
   </div>
 </div>
-<div class="abstract">ABSTRACT</div>
+<div class="minimal">MINIMAL</div>
   <div class="container">
     <div class="row">
       <div class="col-lg-6 col-md-12">
