--- a/html/Nature.html
+++ b/html/Nature.html
@@ -38,7 +38,7 @@
     <div class="navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link" href="../index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="Trending.html">Trending</a>
