--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <title>QWALLITY</title>
+
+  <link rel="stylesheet" href="./css/style.css">
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script> -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lexend+Peta:wght@800&display=swap" rel="stylesheet">
-  <script src="script.js"></script>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>  
 
-  <title>QWALLITY</title>
-   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="script.js"></script>
 </head>
 
 <style>
@@ -42,25 +43,25 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="Trending.html">Trending</a>
+          <a class="nav-link" href="./html/Trending.html">Trending</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Abstract.html">Abstract</a>
+          <a class="nav-link" href="./html/Abstract.html">Abstract</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Minimal.html">Minimal</a>
+          <a class="nav-link" href="./html/Minimal.html">Minimal</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Nature.html">Nature</a>
+          <a class="nav-link" href="./html/Nature.html">Nature</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Marvel.html">Marvel</a>
+          <a class="nav-link" href="./html/Marvel.html">Marvel</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Anime.html">Anime</a>
+          <a class="nav-link" href="./html/Anime.html">Anime</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link about-button" href="About.html">About</a>
+          <a class="nav-link about-button" href="./html/About.html">About</a>
         </li>
       </ul>
     </div>
